# rocket_api

./: 1.txt  Cargo.toml  Procfile  README.md  Rocket.toml  panic.txt  route.rest
src/: main.rs
static/: index.html  old.html
