[package]
name = "rocket_api"
version = "0.1.0"
authors = ["Jamil Ahmed <jamil.ahmed.ja28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = "^0.4.4" 
serde = "^1.0" 
serde_derive = "^1.0" 
serde_json = "^1.0" 
dotenv = "^0.14.1" 
reqwest = "^0.9.19" 
rocket_cors = "^0.5.0" 
lazy_static = "^1.4.0" 
rand = "0.7.3"
 
[dependencies.rocket_contrib]
version = "0.4.2" 
default-features = false 
features = ["tera_templates", "json"] 

[dependencies.mongodb]
version = "0.11.0"
default-features = false
features = ["sync"]
